--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ sumolib==1.21.0
 sympy==1.13.1
 threadpoolctl==3.5.0
 torch==2.5.0
+tqdm==4.67.1
 traci==1.21.0
 typing_extensions==4.12.2
 tzdata==2024.2
